Dark Mode // Chatting System [Bug Fixes]

--- a/chat.css
+++ b/chat.css
@@ -5,17 +5,6 @@
     box-sizing: border-box;
 }
 
-:root {
-    --bgr-light: rgb(232, 240, 247);
-
-    --clr-light: rgb(0, 0, 0);
-
-    --brdr-light: rgb(0, 0, 0);
-
-    --btn-light: rgb(0, 0, 0);
-    --btn-clr-light: rgb(255, 255, 255);
-}
-
 /* IMPORT FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
@@ -37,7 +26,7 @@
 /* BASE STYLES */
 
 body {
-    background-color: var(--bgr-light);
+    background-color: rgb(54, 57, 63);
     padding-top: 60px;
 }
 
